# Original-GW-BASIC-by-Microsoft

./: CMakeLists.txt  README.md  build-linux.sh  build.bat  gwbasic  gwbasic-console
build-linux/: CMakeCache.txt  Makefile  cmake_install.cmake  gwbasic
include/: console.h  eval.h  events.h  fileio.h  gwbasic.h  interp.h  strings.h  tokenizer.h  variables.h
lib/: gw_math_mbf.c  gw_math_mbf.h  gw_memory.c  gw_memory.h  gw_plugin.c  gw_plugin.h  gw_sdl2.c  gw_sdl2.h  gw_serial.c  gw_serial.h
samples/DOS11/: ART_ASCII.BAS  BALL_ASCII.BAS  CIRCLE_ASCII.BAS  COLORBAR_ASCII.BAS  DONKEY_ASCII.BAS  PIECHART_ASCII.BAS  SAMPLES_ASCII.BAS  SPACE_ASCII.BAS
samples/bcg/: basicpp.cfg
src/: console.c  eval.c  events.c  fileio.c  interp.c  main.c  strings.c  tokenizer.c  variables.c
